Some basic pieces in place but thinking to branch to more general structure

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-1) Add in log in system
+1) Add in log in system -> MYSQL table created
 2) Add in create ticket group, Company, and user creation
 3) Add in user account manipulation
 4) Add in user invitation/ email integration
